# cortical_coordinates

./: README.md
ccf_2017_integration/: cortical_annotation.py  create_new_flatmap.py  create_surface_path_index.py  make_pancake.py  processing_steps.py  run_streamlines.py
code/: BinaryDilateImage.cxx  BinaryErodeImage.cxx  BinaryThresholdImage.cxx  BoundaryGradient.cxx  CMakeLists.txt  ComputeChild.cxx  ComputeLaplacian.cxx  ComputeStreamlines.cxx  CreateImageFromIndex.cxx  CreateReverseIndexImage.cxx  CropImage.cxx  FastMarching.cxx  FillStreamlines.cxx  FindSurfaceVoxels.cxx  GenerateForest.cxx  IsMemberImage.cxx  LabelPatches.cxx  MakeIndexImage.cxx  MaskImage.cxx  MaxProjection.cxx  MaxProjectionAlongStreamlines.cxx  MaxProjectionForest.cxx  MorphologicalOpen.cxx  NormalizedGradient.cxx  OpenLabels.cxx  OverwriteImage.cxx  ResampleImage.cxx  SignedDistance.cxx  SubSampleStreams.cxx  UpdateMaster.cxx  idpStructure.cxx  idpStructure.h  idpUtilities.cxx  idpUtilities.h  idpUtilities.txx  idpXMLUtilities.h  itkIsMemberImageFilter.h  itkIsMemberImageFilter.txx  itkLaplacianUpdateImageFilter.h  itkLaplacianUpdateImageFilter.txx  (+3 more)
